CSS changes and making it prettier!

--- a/public/map.html
+++ b/public/map.html
@@ -37,11 +37,9 @@
   <body>
 
     <div id="parkspanel">
-      <img alt="PlanIt logo" src="images/planitlogo.png" />
-      <h1>PlanIt!</h1>
+      <img alt="PlanIt logo" src="images/planitbanner.png" />
 
-      <div id="eventsdata">
-      </div>
+      <div id="eventsdata"></div>
 
     </div>
 
